CAY-2823 Merge ServerRuntime back to CayenneRuntime and deprecate it